Added gcc flag to ignore warnings

--- a/Assignment-1/Makefile
+++ b/Assignment-1/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -o index Index.cpp FileHandler.cpp TreeNode.cpp Utils.cpp commons.cpp LookupIter.cpp
+	g++ -w -o index Index.cpp FileHandler.cpp TreeNode.cpp Utils.cpp commons.cpp LookupIter.cpp
 
 clean:
 	rm index
